# prompt_detective

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  E2E_CONFIG.md  FIREBASE_TOKEN_SETUP.md  GITHUB_SECRETS_SETUP.md  README.md  SECURITY.md  SETUP_GUIDE.md  deploy.md  docker-compose.yml
.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
.github/workflows/: deploy.yml
backend/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules
backend/functions/: .env.sample  .eslintrc.js  create_test_game.js  package-lock.json  package.json  setup_firestore_test.js  test_solana.js  tsconfig.json
blockchain/: Dockerfile  docker-sync.yml
blockchain/prompt_detective/: Anchor.toml  Cargo.toml
blockchain/prompt_detective/programs/prompt_detective/: Cargo.toml
blockchain/prompt_detective/programs/prompt_detective/src/: lib.rs  lib_anchor.rs  lib_simple.rs  lib_simple_native.rs
blockchain/prompt_detective/src/: entrypoint.rs
blockchain/prompt_detective/tests/: prompt_detective.ts
blockchain/sample/: Cargo.toml
frontend/: .env.local  .gitignore  Dockerfile  firebase.json  nuxt.config.ts  package-lock.json  package.json
frontend/components/: AdminCostControls.vue  ConnectWalletButton.vue  DistributionDashboard.vue  ErrorAlert.vue  Identicon.vue  ImageGenerationPanel.vue  Leaderboard.vue  QuizResults.vue  RealtimeGameStatus.vue  UserProfile.vue  UserStatsCard.vue
script/: decode.py
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
(+62 files in other folders)
