[package]
name = "prompt_detective"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.15"
borsh = "1.5.1"

[dev-dependencies]
solana-sdk = "1.18.15"

# もしエラーになったら下記をあんコメントしてみる。

[lib]
crate-type = ["cdylib", "lib"]

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]